# phantom

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  SITE.md  greptile.json  next-prompt.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
conductor/: phase-1-analytical-hardening.md
docs/: HANDOFF.md
docs/superpowers/specs/: 2026-03-16-analysis-workbench-design.md
examples/: argus_anomaly.rs  kalshi_edge.rs
gui/: DESIGN.md  SITE.md  next-prompt.md  stitch.json
gui/site/public/: index.html  price.html  weather.html
phantom-ui/: .gitignore  package-lock.json  package.json
phantom-ui/src/app/: globals.css  layout.tsx  page.tsx
phantom-ui/src/app/argus/: page.tsx
phantom-ui/src/app/lab/: page.tsx
phantom-ui/src/app/price/: page.tsx
phantom-ui/src/app/signals/: page.tsx
phantom-ui/src/app/weather/: page.tsx
phantom-ui/src/components/: ChaosTimeline.tsx  ChartPanel.tsx  DataLoader.tsx  EsnPrediction.tsx  FtleHeatmap.tsx  MiniCard.tsx  NavPill.tsx  ParameterTuner.tsx  PhantomHeader.tsx  PhaseSpace.tsx
phantom-ui/src/lib/: api.ts  useSignalStream.ts
src/: CLAUDE.md  lib.rs  main.rs
src/api/: analyze.rs  argus.rs  esn.rs  feeds.rs  metrics.rs  mod.rs  signals.rs  signals_db.rs  sse.rs
src/daemon/: feed_buffer.rs  mod.rs
src/detectors/: argus.rs  mod.rs  price.rs  weather.rs
src/feeds/: kalshi.rs  mod.rs  open_meteo.rs  opensky.rs  prices.rs  usgs.rs
src/ftle/: echo_state.rs  embedding.rs  ftle.rs  mod.rs
src/signals/: kalshi.rs  mod.rs
tests/: feeds_integration.rs  integration.rs
