[package]
name = "phantom"
version = "0.1.0"
edition = "2021"
description = "Anomaly detection engine for ARGUS geospatial, weather markets, and price regime changes"
license = "MIT"

[[bin]]
name = "phantom"
path = "src/main.rs"

[lib]
name = "phantom"
path = "src/lib.rs"

[[example]]
name = "argus_anomaly"
path = "examples/argus_anomaly.rs"

[[example]]
name = "kalshi_edge"
path = "examples/kalshi_edge.rs"

[dependencies]
# Anomaly detection & pattern matching
aimds-detection = "=0.1.0"
aimds-core = "=0.1.0"
midstreamer-temporal-compare = "=0.1.0"
midstreamer-scheduler = "=0.1.0"

# FTLE / chaos math deps
anyhow = "=1.0.102"
ndarray = { version = "0.15", features = ["rayon"] }
nalgebra = "0.32"
rand = { version = "0.8", features = ["std_rng"] }
rayon = "1.8"

# Shared utilities
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.50.0", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "=0.4.44", features = ["serde"] }
thiserror = "=1.0.69"
uuid = { version = "=1.22.0", features = ["v4"] }

# Pattern matching & hashing (from aimds-detection)
aho-corasick = "=1.1.4"
blake3 = "=1.8.3"
dashmap = "=5.5.3"
fancy-regex = "=0.13.0"
lru = "=0.12.5"
parking_lot = "=0.12.5"
regex = "=1.12.3"
sha2 = "=0.10.9"

# HTTP for fetching Open-Meteo / NWS feeds
reqwest = { version = "0.12", features = ["json"] }

# Kalshi RSA-PSS authentication
rsa = { version = "0.9", features = ["sha2"] }
base64 = "0.22"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
lazy_static = "1.5.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

[dev-dependencies]
criterion = "=0.5.1"
proptest = "=1.10.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
